# replicante

./: .gitignore  CUSTOM_GOALS.md  Cargo.toml  DEPLOY.md  DOCKER_NETWORK_SECURITY.md  Dockerfile  Dockerfile.monitor  Dockerfile.supervisor  LICENSE  OLLAMA_EXAMPLE.md  OLLAMA_TEST.md  PLAN.md  README.md  SANDBOX_README.md  SUPERVISOR.md  SUPERVISOR_IMPROVEMENTS.md  TEST_IMPROVEMENTS_RESULTS.md  TEST_RESULTS.md  TEST_SUPERVISOR_RESULTS.md  config-enhanced.toml  config-examples.toml  config-ollama-docker.toml  config-ollama-example.toml  config-ollama.toml  config.example.toml  docker-compose.network.yml  docker-compose.ollama.yml  docker-compose.test.yml  docker-compose.yml  flake.nix  incident_47f2656e-97e9-4ad7-84e9-0e6606518712_20250817_190921.json  run.sh  test_mcp_config.toml  test_supervisor_e2e.sh  test_supervisor_improved.sh  test_supervisor_local.sh
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml
config/: agent-test-1.toml  agent-test-2.toml  agent.toml  sandbox-strict.toml  sandbox.toml  supervisor-test.toml  supervisor.toml  test-agent-1.toml  test-agent-2.toml  test-agent-3.toml  test-supervisor.toml
dns/: dnsmasq.conf  hosts.allow
docker/: Dockerfile.mcp-tools  Dockerfile.rust-mcp  mcp-tools-client.py
docs/: MCP_IMPLEMENTATION.md
examples/: test_ollama.rs
network-policy/: capture.sh  monitor-traffic.sh  setup-iptables.sh
proxy/: squid.conf  whitelist.txt
scripts/: build-static.sh
src/: config.rs  jsonrpc.rs  lib.rs  llm.rs  main.rs  mcp.rs  mcp_protocol.rs  state.rs
src/supervisor/: api.rs  async_client.rs  client.rs  container_manager.rs  daemon.rs  log_stream.rs  log_stream.rs.bak  mod.rs  monitor.rs  security.rs
test/: http_mcp_server.py  mock_mcp_server.py
tests/: autonomous_reasoning.rs  core_components.rs  learning_tests.rs  mcp_integration.rs  supervisor_integration.rs
